[package]
name = "rust-ci-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.32.0"
tokio = { version = "1.35.1", features = ["rt", "net", "macros"] }
futures-util = "0.3.30"
anyhow = "1.0.76"
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
